Add jest-setup and fix two test
Add jest configuration and fix some visual issues

Add test to each component and container

--- a/src/app/components/Card/styles.scss
+++ b/src/app/components/Card/styles.scss
@@ -10,6 +10,11 @@
   &__actions {
     position: absolute;
     background-color: $base-color;
+    
+    .button--icon {
+      padding: 0px;
+    }
+
     i {
       margin: torem(3px);
       color: $secondary-color;
